Release AI Fabric 0.5.0